--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "typeRoots": ["/app/types", "./node_modules/@types"],
     "plugins": [
       {
         "name": "next"
